Fix overflow

--- a/app/assets/stylesheets/components/_wrappers.sass
+++ b/app/assets/stylesheets/components/_wrappers.sass
@@ -36,7 +36,3 @@
     height: 500px
     background: #f1f1f1
 
-#wrapper-contact
-    width: 100%
-    height: 600px
-
